# rust-etude.dev

./: .gitignore  Cargo.toml  README.md
adder/src/: lib.rs
adder/tests/: DELETED_common.rs  integration_test.rs
assets/: 自己解釈.md
assets/md/jp_docs/: 0.導入.md
assets/md/日本語doc自己解釈/: 0.導入.md
src/: data-types.rs  main.rs  自己解釈.md
src/lib/: collections.rs  data_types.rs  enm_mch_iflet.rs  enumerate.rs  error_handl.rs  flow_control.rs  generics_and_lifetime.rs  generics_and_traits.rs  lifetime.rs  mod.rs  ownership.rs  packages_crates_modules.rs  structure.rs  testings.rs
src/others/: collections.rs  data_types.rs  error_handl.rs  flow_control.rs  generics_and_traits.rs  lifetime.rs  mod.rs  ownership.rs  packages_crates_modules.rs
static/: name.txt
webdev/: Cargo.toml
webdev/src/: front_of_house_iii.rs  hosting_iv.rs  lib.rs
